# dochub-course

./: .gitignore  CMakeLists.txt
app/: main.cpp
src/core/domain/: README.md  registry.hpp  user.hpp
src/core/domain/document/: certificate.cpp  certificate.hpp  document.cpp  document.hpp
src/core/features/: README.md  certificate_service.cpp  certificate_service.hpp  create_document.cpp  delete_document.cpp  document_features.hpp  document_service.cpp  document_service.hpp  read_document.cpp  update_document.cpp
src/interface/cli/: admin_cli.cpp  admin_cli.hpp  cli.hpp  user_cli.cpp  user_cli.hpp
src/interface/cli/menu/: README.md  console_menu.cpp  console_menu.hpp  function_item.cpp  function_item.hpp  menu_item.cpp  menu_item.hpp
src/interface/persistence/: README.md  certificate_repository.hpp  document_repository.hpp
src/services/: README.md
src/services/persistence/: README.md  certificate_file_repository.cpp  certificate_file_repository.hpp  document_file_repository.cpp  document_file_repository.hpp  document_object_repository.cpp  document_object_repository.hpp
